Fixing the article to align in the more news

--- a/responsive-news-site/webroot/css/article_longform.css
+++ b/responsive-news-site/webroot/css/article_longform.css
@@ -1,3 +1,12 @@
 .article_longform {
   padding: 0;
 }
+
+@media (min-width: 768px) {
+  .article_more_news {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 40px;
+    padding-block-start: 0;
+  }
+}
